<resources>
    <string name="app_name">Kugel</string>
    <string name="lblGameTitle">Kugel</string>
    <string name="btnInfo">info</string>
    <string name="btnQuit">quit</string>
    <string name="btnStart">start game</string>
    <string name="imgTitleKugel">title Kugel</string>
    <string name="imgBackground">background image</string>
    <string name="timePlaying">time</string>
    <string name="playerScore">your score</string>
    <string name="congratulations">Congratulations!</string>
    <string name="youHave_POINTS">you gained</string>
    <string name="points">Points!</string>
    <string name="level">level</string>
    <string name="remainingLifes">lifes</string>
    <string name="messageInfo">conceived and written by M. J. Konrad</string>
    <string name="titlekugel">Titlekugel</string>
    <string name="lblTapToPause">tap to pause</string>
    <string name="lblBestHighscore">Your best score was</string>
    <string name="lblYouCanDoBetter">You can do better!</string>
    <string name="lblNextLevel">Attention! Next ball!</string>
    <string name="inputPlayerName">Kugel Player</string>
    <string name="infoMessage">Kugel - A little game\nwritten by M. J. Konrad\n\n
          HOW TO PLAY\n\n
        Hold your mobile as if the ball lies on it and move it - the ball will roll!
        Now try to catch as many green balls as you can and avoid the ""bad"" ones that appear on the left from time to time. Each time
        you touch one of these you loose a life. After loosing three lifes the game is over.\n\n  THANKS\n\n
        I want to thank my family and friends for patient and carefully game testing.\n
        Special thanks to Ali for helping me to get into the PlayStore :-)\n\n
          LICENSE\n\n
        This game is free (as in ""Freedom""), licensed under the GNU General Public License 3.
        If you play this game, you accept it!\n\n\n
Kugel Copyright © 2020 by Marcel Jérôme Konrad
\n\n
    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.
\n\n
    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License at
\nhttps://www.gnu.org/licenses/ for more details
    </string>
    <string name="btnSettingsDescription">settings</string>
    <string name="lblKugelColor">enemy color</string>
    <string name="lblScreenBrightness">screen brightness</string>
    <string name="lblBtnBack">back</string>
    <string name="lblPlayName">Your name:</string>
</resources>